--- a/doc/ref.tex
+++ b/doc/ref.tex
@@ -602,11 +602,11 @@ updates to concurrent data structures, etc. A simple example is:
   }
 \end{verbatim}
 
-Atomic sections should be short; to help meet this requirement, \nesc
-forbids calling commands or signaling events inside atomic statements.  The
-following constructions are also forbidden inside atomic statements (but
-may be allowed in future versions of \nesc): \kw{goto}, \kw{return},
-\kw{break}, \kw{continue}, \kw{case}, \kw{default} and labels.
+Atomic sections should be short, though this is not currently enforced in
+any way.  Control may only flow ``normally'' in or out of on atomic
+statement: any \kw{goto}, \kw{break} or \kw{continue} that jumps in or out
+of an atomic statement is an error. A \kw{return} statement is never
+allowed inside an atomic statement.
 
 Section~\ref{sec:concurrency} discusses the relation between \kw{atomic} and
 \nesc's concurrency model and data-race detector.
