--- a/regress/abstract/types/.ok/type2.2
+++ b/regress/abstract/types/.ok/type2.2
@@ -1,2 +1,2 @@
-nesc1: formal parameter 1 must be a type
-nesc1: type parameter cannot be an array type (parameter 1)
+test.nc:3: formal parameter 1 must be a type
+test.nc:3: type parameter cannot be an array type (parameter 1)
