generic intf type compatibility testing

--- a/regress/abstract/types/.ok/intf5.2
+++ b/regress/abstract/types/.ok/intf5.2
@@ -8,3 +8,4 @@ test.nc:3: formal parameter 1 must be a type
 test.nc:3: formal parameter 2 must be a value
 test.nc:3: formal parameter 1 must be a type
 test.nc:3: formal parameter 2 must be a value
+test.nc:6: no match
