tests, tests (string args)

--- a/regress/abstract/types/.ok/intf1.1
+++ b/regress/abstract/types/.ok/intf1.1
@@ -2,10 +2,10 @@ typedef int main$sc$t1;
 typedef char *main$sc$t2;
 typedef int mod$sc$t1;
 typedef char *mod$sc$t2;
-static  mod$sc$t1 mod$sc$init(mod$sc$t2 arg_0x82f44b8, int arg_0x82f4608);
+static  mod$sc$t1 mod$sc$init(mod$sc$t2 arg_hex, int arg_hex);
 static  
 # 2 "sc.nc"
-main$sc$t1 main$sc$init(main$sc$t2 arg_0x82f44b8, int arg_0x82f4608);
+main$sc$t1 main$sc$init(main$sc$t2 arg_hex, int arg_hex);
 # 5 "main.nc"
 void  main$entry(void);
 static inline  
@@ -20,13 +20,13 @@ int mod$sc$init(char *foo, int b)
 }
 
 # 2 "sc.nc"
-inline static  main$sc$t1 main$sc$init(main$sc$t2 arg_0x82f44b8, int arg_0x82f4608){
+inline static  main$sc$t1 main$sc$init(main$sc$t2 arg_hex, int arg_hex){
 #line 2
   int result;
 #line 2
 
 #line 2
-  result = mod$sc$init(arg_0x82f44b8, arg_0x82f4608);
+  result = mod$sc$init(arg_hex, arg_hex);
 #line 2
 
 #line 2
