--- a/regress/abstract/types/.ok/type1.1
+++ b/regress/abstract/types/.ok/type1.1
@@ -6,13 +6,13 @@ void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
-struct mod$0$oops {
+struct /*test.mod1*/mod$0$oops {
   int x;
 } /*test.mod1*/mod$0$a;
 static inline  
 void /*test.mod1*/mod$0$sc$init(void);
 #line 5
-struct mod$1$oops {
+struct /*test.mod2*/mod$1$oops {
   int x;
 } /*test.mod2*/mod$1$a;
 static inline  
