--- a/regress/abstract/types/.ok/enum1.1
+++ b/regress/abstract/types/.ok/enum1.1
@@ -6,7 +6,7 @@ void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
-enum mod$0$__nesc_unnamed4242 {
+enum /*test.mod1*/mod$0$__nesc_unnamed4242 {
   mod$0$first = 2, 
   mod$0$next, 
   mod$0$last = 3
@@ -14,7 +14,7 @@ enum mod$0$__nesc_unnamed4242 {
 static inline  
 void /*test.mod1*/mod$0$sc$init(void);
 #line 5
-enum mod$1$__nesc_unnamed4243 {
+enum /*test.mod2*/mod$1$__nesc_unnamed4243 {
   mod$1$first = 20, 
   mod$1$next, 
   mod$1$last = 3
