--- a/regress/abstract/types/.ok/intf3.1
+++ b/regress/abstract/types/.ok/intf3.1
@@ -4,11 +4,11 @@ typedef int /*test.conf1.themod*/mod$0$sc$t1;
 typedef char */*test.conf1.themod*/mod$0$sc$t2;
 typedef int /*test.conf2.themod*/mod$1$sc$t1;
 typedef char */*test.conf2.themod*/mod$1$sc$t2;
-static  mod$0$sc$t1 /*test.conf1.themod*/mod$0$sc$init(mod$0$sc$t2 arg_0x82f4708, int arg_0x82f4858);
-static  mod$1$sc$t1 /*test.conf2.themod*/mod$1$sc$init(mod$1$sc$t2 arg_0x82f4708, int arg_0x82f4858);
+static  /*test.conf1.themod*/mod$0$sc$t1 /*test.conf1.themod*/mod$0$sc$init(/*test.conf1.themod*/mod$0$sc$t2 arg_hex, int arg_hex);
+static  /*test.conf2.themod*/mod$1$sc$t1 /*test.conf2.themod*/mod$1$sc$init(/*test.conf2.themod*/mod$1$sc$t2 arg_hex, int arg_hex);
 static  
 # 2 "sc.nc"
-main$sc$t1 main$sc$init(main$sc$t2 arg_0x82f4708, int arg_0x82f4858);
+main$sc$t1 main$sc$init(main$sc$t2 arg_hex, int arg_hex);
 # 5 "main.nc"
 void  main$entry(void);
 static inline  
@@ -34,15 +34,15 @@ int /*test.conf1.themod*/mod$0$sc$init(char *foo, int b)
 }
 
 # 2 "sc.nc"
-inline static  main$sc$t1 main$sc$init(main$sc$t2 arg_0x82f4708, int arg_0x82f4858){
+inline static  main$sc$t1 main$sc$init(main$sc$t2 arg_hex, int arg_hex){
 #line 2
   int result;
 #line 2
 
 #line 2
-  result = /*test.conf1.themod*/mod$0$sc$init(arg_0x82f4708, arg_0x82f4858);
+  result = /*test.conf1.themod*/mod$0$sc$init(arg_hex, arg_hex);
 #line 2
-  result = /*test.conf2.themod*/mod$1$sc$init(arg_0x82f4708, arg_0x82f4858);
+  result = /*test.conf2.themod*/mod$1$sc$init(arg_hex, arg_hex);
 #line 2
 
 #line 2
