--- a/regress/abstract/types/.ok/str1.1
+++ b/regress/abstract/types/.ok/str1.1
@@ -5,40 +5,44 @@ static
 void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
+static inline 
 # 5 "mod.nc"
-struct /*test.mod1*/mod$0$hmm {
-  int x[2];
-  int f;
-} /*test.mod1*/mod$0$x;
-
-int /*test.mod1*/mod$0$a = sizeof /*test.mod1*/mod$0$x;
-int /*test.mod1*/mod$0$b = (int )& ((struct mod$hmm *)0)->f;
+void /*test.mod1*/mod$0$fun(char *s);
 static inline  
 void /*test.mod1*/mod$0$sc$init(void);
+static inline 
 #line 5
-struct /*test.mod2*/mod$1$hmm {
-  int x[20];
-  int f;
-} /*test.mod2*/mod$1$x;
-
-int /*test.mod2*/mod$1$a = sizeof /*test.mod2*/mod$1$x;
-int /*test.mod2*/mod$1$b = (int )& ((struct mod$hmm *)0)->f;
+void /*test.mod2*/mod$1$fun(char *s);
 static inline  
 void /*test.mod2*/mod$1$sc$init(void);
-static inline  
-#line 13
-void /*test.mod2*/mod$1$sc$init(void)
-#line 13
+static inline 
+#line 5
+void /*test.mod2*/mod$1$fun(char *s)
+#line 5
 {
-  /*test.mod2*/mod$1$x.x[0] = /*test.mod2*/mod$1$a + /*test.mod2*/mod$1$b;
 }
 
 static inline  
-#line 13
-void /*test.mod1*/mod$0$sc$init(void)
-#line 13
+#line 7
+void /*test.mod2*/mod$1$sc$init(void)
+#line 7
 {
-  /*test.mod1*/mod$0$x.x[0] = /*test.mod1*/mod$0$a + /*test.mod1*/mod$0$b;
+  /*test.mod2*/mod$1$fun("oops");
+}
+
+static inline 
+#line 5
+void /*test.mod1*/mod$0$fun(char *s)
+#line 5
+{
+}
+
+static inline  
+#line 7
+void /*test.mod1*/mod$0$sc$init(void)
+#line 7
+{
+  /*test.mod1*/mod$0$fun("a");
 }
 
 # 2 "sc.nc"
