--- a/regress/abstract/types/.ok/struct4.1
+++ b/regress/abstract/types/.ok/struct4.1
@@ -6,7 +6,7 @@ void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
-struct mod$0$hmm {
+struct /*test.mod1*/mod$0$hmm {
   int x : 2;
   int f;
 } /*test.mod1*/mod$0$x;
@@ -16,7 +16,7 @@ int /*test.mod1*/mod$0$b = (int )& ((struct mod$hmm *)0)->f;
 static inline  
 void /*test.mod1*/mod$0$sc$init(void);
 #line 5
-struct mod$1$hmm {
+struct /*test.mod2*/mod$1$hmm {
   int x : 20;
   int f;
 } /*test.mod2*/mod$1$x;
