--- a/regress/abstract/types/.ok/struct6.1
+++ b/regress/abstract/types/.ok/struct6.1
@@ -6,13 +6,13 @@ void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
-struct mod$0$hmm {
+struct /*test.mod1*/mod$0$hmm {
   int x : 2;
   char f;
 } /*test.mod1*/mod$0$x;
 
 int /*test.mod1*/mod$0$a = sizeof /*test.mod1*/mod$0$x;
-enum mod$0$__nesc_unnamed4242 {
+enum /*test.mod1*/mod$0$__nesc_unnamed4242 {
 #line 11
   mod$0$b = (int )& ((struct mod$hmm *)0)->f
 };
@@ -21,13 +21,13 @@ int /*test.mod1*/mod$0$c = 1 / (/*test.mod1*/mod$0$b == 1 || /*test.mod1*/mod$0$
 static inline  
 void /*test.mod1*/mod$0$sc$init(void);
 #line 5
-struct mod$1$hmm {
+struct /*test.mod2*/mod$1$hmm {
   int x : 20;
   char f;
 } /*test.mod2*/mod$1$x;
 
 int /*test.mod2*/mod$1$a = sizeof /*test.mod2*/mod$1$x;
-enum mod$1$__nesc_unnamed4243 {
+enum /*test.mod2*/mod$1$__nesc_unnamed4243 {
 #line 11
   mod$1$b = (int )& ((struct mod$hmm *)0)->f
 };
