--- a/regress/abstract/types/.ok/type5.1
+++ b/regress/abstract/types/.ok/type5.1
@@ -8,28 +8,28 @@ void main$sc$init(void);
 # 5 "main.nc"
 void  main$entry(void);
 # 5 "mod.nc"
-struct mod$0$oops {
-  mod$0$t x;
+struct /*test.mod1*/mod$0$oops {
+  /*test.mod1*/mod$0$t x;
 } /*test.mod1*/mod$0$a;
 static inline 
-mod$0$t /*test.mod1*/mod$0$f(mod$0$t x);
+/*test.mod1*/mod$0$t /*test.mod1*/mod$0$f(/*test.mod1*/mod$0$t x);
 static inline  
 
 
 void /*test.mod1*/mod$0$sc$init(void);
 #line 5
-struct mod$1$oops {
-  mod$1$t x;
+struct /*test.mod2*/mod$1$oops {
+  /*test.mod2*/mod$1$t x;
 } /*test.mod2*/mod$1$a;
 static inline 
-mod$1$t /*test.mod2*/mod$1$f(mod$1$t x);
+/*test.mod2*/mod$1$t /*test.mod2*/mod$1$f(/*test.mod2*/mod$1$t x);
 static inline  
 
 
 void /*test.mod2*/mod$1$sc$init(void);
 static inline 
 #line 9
-mod$1$t /*test.mod2*/mod$1$f(mod$1$t x)
+/*test.mod2*/mod$1$t /*test.mod2*/mod$1$f(/*test.mod2*/mod$1$t x)
 #line 9
 {
   return x;
@@ -43,7 +43,7 @@ static inline  void /*test.mod2*/mod$1$sc$init(void)
 
 static inline 
 #line 9
-mod$0$t /*test.mod1*/mod$0$f(mod$0$t x)
+/*test.mod1*/mod$0$t /*test.mod1*/mod$0$f(/*test.mod1*/mod$0$t x)
 #line 9
 {
   return x;
