More code cleanup and comments.  Added bugs list.

--- a/README
+++ b/README
@@ -5,6 +5,8 @@ included below.
 
 All installation instructions for galsC are the same as those for nesC.
 
+See BUGS file for known bugs.
+
 ===========================================================================
 This is the 1.1.1 release of nesC. 
 
